--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Dlib_Model/shape_predictor_68_face_landmarks.dat
 /Custom_Model/efficientnet_face_model.pth
 /Custom_Model/WFLW
+/Dlib_Model/dataset
+/Dlib_Model/processed_dataset
